--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "formiojs",
-  "version": "4.10.0-beta.15",
+  "name": "netsa_formiojs",
+  "version": "0.1.4",
   "description": "JavaScript powered Forms with JSON Form Builder",
   "main": "index.js",
   "types": "index.d.ts",
@@ -35,22 +35,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/formio/formio.js.git"
+    "url": "https://github.com/hajarmousavi/netsa_formiojs"
   },
   "contributors": [
     {
       "name": "Form.io Open Source Community",
-      "url": "https://github.com/formio/formio.js/graphs/contributors"
+      "url": "https://github.com/hajarmousavi/netsa_formiojs/graphs/contributors"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/formio/formio.js/issues"
+    "url": "https://github.com/hajarmousavi/netsa_formiojs/issues"
   },
   "browser": {
     "vm": false
   },
-  "homepage": "https://github.com/formio/formio.js#readme",
+  "homepage": "https://github.com/hajarmousavi/netsa_formiojs#readme",
   "dependencies": {
     "@formio/bootstrap3": "^2.5.0",
     "@formio/semantic": "^2.4.0",
@@ -85,7 +85,9 @@
     "tooltip.js": "^1.3.3",
     "uuid": "^8.0.0",
     "vanilla-picker": "^2.10.1",
-    "vanilla-text-mask": "^5.1.1"
+    "vanilla-text-mask": "^5.1.1",
+    "inspire-tree": "^4.2.1",	 
+    "inspire-tree-dom": "^4.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
