--- a/app/fontawesome/package.json
+++ b/app/fontawesome/package.json
@@ -2,7 +2,7 @@
   "_args": [
     [
       "font-awesome@4.7.0",
-      "C:\\WorkSpace-GIT\\netsa_formiojs"
+      "C:\\WorkSpace_Git\\netsa_formiojs"
     ]
   ],
   "_development": true,
@@ -27,7 +27,7 @@
   ],
   "_resolved": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz",
   "_spec": "4.7.0",
-  "_where": "C:\\WorkSpace-GIT\\netsa_formiojs",
+  "_where": "C:\\WorkSpace_Git\\netsa_formiojs",
   "author": {
     "name": "Dave Gandy",
     "email": "dave@fontawesome.io",
