--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netsa_formiojs",
-  "version": "0.1.41",
+  "version": "0.1.42",
   "description": "JavaScript powered Forms with JSON Form Builder",
   "main": "index.js",
   "types": "index.d.ts",
@@ -67,10 +67,12 @@
     "fast-deep-equal": "^3.1.1",
     "fast-json-patch": "^2.2.1",
     "fetch-ponyfill": "^6.1.0",
-    "persianflatpickr": "^0.0.9",
     "i18next": "^19.4.4",
     "idb": "^5.0.2",
+    "inspire-tree": "^4.2.1",
+    "inspire-tree-dom": "^4.0.6",
     "ismobilejs": "^1.1.1",
+    "jalali-moment": "^3.3.8",
     "json-logic-js": "^1.2.2",
     "jstimezonedetect": "^1.0.7",
     "jwt-decode": "^2.2.0",
@@ -78,6 +80,7 @@
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.28",
     "native-promise-only": "^0.8.1",
+    "persianflatpickr": "^0.0.9",
     "resize-observer-polyfill": "^1.5.1",
     "signature_pad": "^2.3.2",
     "string-hash": "^1.1.3",
@@ -85,9 +88,7 @@
     "tooltip.js": "^1.3.3",
     "uuid": "^8.0.0",
     "vanilla-picker": "^2.10.1",
-    "vanilla-text-mask": "^5.1.1",
-    "inspire-tree": "^4.2.1",
-    "inspire-tree-dom": "^4.0.6"
+    "vanilla-text-mask": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
